[package]
name = "tokio-bist"
version = "0.1.1"
edition = "2024"
description = "Bult-in self-test runner for Tokio-based applications"
authors = ["Åke Amcoff <ake@amcoff.net>"]
repository = "https://github.com/akeamc/tokio-bist"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
superconsole = "0.2.0"
tokio = { version = "1.48.0", features = ["rt", "sync"] }

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
